--- a/src/main/resources/static/css/themes/_admin.scss
+++ b/src/main/resources/static/css/themes/_admin.scss
@@ -81,6 +81,7 @@ main {
         padding-left: 264px;
 
         nav {
+            background-color: white;
             position: fixed;
             top: 0;
             left: 0;
