--- a/src/main/resources/templates/account/signUp.html
+++ b/src/main/resources/templates/account/signUp.html
@@ -23,10 +23,10 @@
                     <div class="signup_body mt-5">
                         <form id="signUpFormDto" th:action="@{/signUp}" th:object="${signUpFormDto}" method="post"
                             onsubmit="return chkPW()">
-                            <table>
+                            <table style="table-layout: fixed !important;">
                                 <colgroup>
-                                    <col style="width:150px;">
-                                    <col style="width:auto;">
+                                    <col style="width:15%;">
+                                    <col style="width: auto;">
                                 </colgroup>
                                 <tbody>
                                     <tr>
