--- a/src/main/resources/static/css/layout/_footer.scss
+++ b/src/main/resources/static/css/layout/_footer.scss
@@ -1,6 +1,6 @@
 /* footer start */
 footer {
-    padding: 100px 0;
+    padding: 140px 0 90px;
 
     .footer_header {
         text-align: center;
