--- a/src/main/resources/static/css/pages/_signUp.scss
+++ b/src/main/resources/static/css/pages/_signUp.scss
@@ -148,7 +148,7 @@
 
             table {
                 colgroup {
-                    .test {
+                    col:nth-child(1) {
                         width: 25% !important;
                     }
                 }
