--- a/src/main/resources/templates/layouts/adminLayout.html
+++ b/src/main/resources/templates/layouts/adminLayout.html
@@ -14,8 +14,47 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- xeicon css -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+    <!-- custom css -->
+    <link rel="stylesheet" href="/css/admin.css">
 
-    <link rel="stylesheet" href="/css/main_admin.css">
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <!-- bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <!-- fontawesome js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
+        integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- common js -->
+    <script>
+        $(window).scroll(function () {
+            if ($(this).scrollTop() == 0)
+                $('nav').css('opacity', '1');
+            else
+                $('nav').css('opacity', '.6');
+        });
+
+        <!-- sidebar toggle 기능 -->
+        let toggleBtn = $('.menu_toggle');
+        let sidebar = $('.sidebar');
+        toggleBtn.click(function (e) {
+            e.preventDefault();
+            sidebar.toggleClass("active");
+        })
+    </script>
+    <!-- csrf token -->
+    <script type="application/javascript" th:inline="javascript">
+        $(function () {
+            var csrfToken = /*[[${_csrf.token}]]*/ null;
+            var csrfHeader = /*[[${_csrf.headerName}]]*/ null;
+            $(document).ajaxSend(function (e, xhr, options) {
+                xhr.setRequestHeader(csrfHeader, csrfToken);
+            });
+        });
+    </script>
 </th:block>
 
 <body>
@@ -43,7 +82,7 @@
                         <i class="xi-cog pe-2"></i>
                         Home
                     </a>
-                    <a th:href="@{/admin/item/new}" class="sidebar-link"
+                    <a th:href="@{/admin/items}" class="sidebar-link"
                         th:classappend="${currentMenu == 'productManagement'}? active">
                         <i class="xi-shop pe-2"></i>
                         상품 관리
@@ -108,48 +147,6 @@
             </footer>
         </article>
     </main>
-
-    <th:block th:fragment="JS">
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-        <!-- bootstrap js -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
-        <!-- fontawesome js -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
-            integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <!-- 스크롤 시 navbar 투명 -->
-        <script>
-            $(window).scroll(function () {
-                if ($(this).scrollTop() == 0)
-                    $('nav').css('opacity', '1');
-                else
-                    $('nav').css('opacity', '.6');
-            });
-        </script>
-
-        <!-- sidebar toggle 기능 -->
-        <script>
-            let toggleBtn = $('.menu_toggle');
-            let sidebar = $('.sidebar');
-            toggleBtn.click(function (e) {
-                e.preventDefault();
-                sidebar.toggleClass("active");
-            })
-        </script>
-    </th:block>
-    <script type="application/javascript" th:inline="javascript" th:fragment="csrf">
-        $(function () {
-            var csrfToken = /*[[${_csrf.token}]]*/ null;
-            var csrfHeader = /*[[${_csrf.headerName}]]*/ null;
-            $(document).ajaxSend(function (e, xhr, options) {
-                xhr.setRequestHeader(csrfHeader, csrfToken);
-            });
-        });
-    </script>
 </body>
 
 </html>
