--- a/src/main/resources/static/css/base/_reset.scss
+++ b/src/main/resources/static/css/base/_reset.scss
@@ -1,5 +1,6 @@
 /* reset start */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
 @font-face {
     font-family: 'JeonjuCraftMjB';
@@ -7,7 +8,6 @@
     font-weight: 700;
     font-style: normal;
 }
-
 
 * {
     margin: 0;
