--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -1,5 +1,6 @@
 /* reset start */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 @font-face {
   font-family: "JeonjuCraftMjB";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/JeonjuCraftMjB.woff2") format("woff2");
@@ -41,6 +42,7 @@ button:focus {
 button.black_btn {
   display: inline-block;
   width: 130px;
+  height: 40px;
   padding: 10px 8px 10px 8px;
   font-size: 13px;
   border: 1px solid transparent;
@@ -57,6 +59,7 @@ button.black_btn:hover {
 button.black_btn_sm {
   display: inline-block;
   width: 90px;
+  height: 40px;
   padding: 10px 8px 10px 8px;
   font-size: 13px;
   border: 1px solid transparent;
@@ -73,6 +76,7 @@ button.black_btn_sm:hover {
 button.white_btn {
   display: inline-block;
   width: 130px;
+  height: 40px;
   padding: 10px 8px 10px 8px;
   font-size: 13px;
   border: 1px solid #e2e2e2;
@@ -89,6 +93,7 @@ button.white_btn:hover {
 button.white_btn_sm {
   display: inline-block;
   width: 90px;
+  height: 40px;
   padding: 10px 8px 10px 8px;
   font-size: 13px;
   border: 1px solid #e2e2e2;
@@ -102,9 +107,59 @@ button.white_btn_sm:hover {
   border: 1px solid black;
 }
 
+button.black_btn_w90_h40 {
+  display: inline-block;
+  width: 90px;
+  height: 40px;
+  font-size: 12px;
+  border: 1px solid transparent;
+  vertical-align: middle;
+  text-align: center;
+  color: #fff;
+  background-color: #151515;
+  border-radius: 0 !important;
+}
+button.black_btn_w90_h40:hover {
+  background-color: #474747;
+}
+
+button.white_btn_w90_h40 {
+  display: inline-block;
+  width: 90px;
+  height: 40px;
+  font-size: 12px;
+  border: 1px solid #e2e2e2;
+  vertical-align: middle;
+  text-align: center;
+  color: #222;
+  background-color: #fff;
+  border-radius: 0px !important;
+}
+button.white_btn_w90_h40:hover {
+  border: 1px solid black;
+}
+
+a.black_btn {
+  display: inline-block;
+  width: 130px;
+  height: 40px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid #e2e2e2;
+  vertical-align: middle;
+  text-align: center;
+  color: #fff;
+  background-color: #151515;
+  border-radius: 0px !important;
+}
+a.black_btn:hover {
+  background-color: #474747;
+}
+
 a.white_btn {
   display: inline-block;
   width: 130px;
+  height: 40px;
   padding: 10px 8px 10px 8px;
   font-size: 13px;
   border: 1px solid #e2e2e2;
@@ -118,9 +173,44 @@ a.white_btn:hover {
   border: 1px solid black;
 }
 
+a.black_btn_w90_h40 {
+  display: inline-block;
+  width: 90px;
+  height: 40px;
+  padding: 10px 8px 10px 8px;
+  font-size: 12px;
+  border: 1px solid transparent;
+  vertical-align: middle;
+  text-align: center;
+  color: #fff;
+  background-color: #151515;
+  border-radius: 0 !important;
+}
+a.black_btn_w90_h40:hover {
+  background-color: #474747;
+}
+
+a.white_btn_w90_h40 {
+  display: inline-block;
+  width: 90px;
+  height: 40px;
+  padding: 10px 8px 10px 8px;
+  font-size: 12px;
+  border: 1px solid #e2e2e2;
+  vertical-align: middle;
+  text-align: center;
+  color: #222;
+  background-color: #fff;
+  border-radius: 0px !important;
+}
+a.white_btn_w90_h40:hover {
+  border: 1px solid black;
+}
+
 label.black_btn {
   display: inline-block;
   width: 130px;
+  height: 40px;
   padding: 10px 8px 10px 8px;
   font-size: 13px;
   border: 1px solid transparent;
@@ -138,6 +228,7 @@ label.black_btn:hover {
 label.black_btn_sm {
   display: inline-block;
   width: 90px;
+  height: 25px;
   padding: 10px 8px 10px 8px;
   font-size: 13px;
   border: 1px solid transparent;
@@ -155,6 +246,7 @@ label.black_btn_sm:hover {
 label.white_btn_sm {
   display: inline-block;
   width: 90px;
+  height: 25px;
   padding: 4px 3px 4px 3px;
   font-size: 11px;
   border: 1px solid #e2e2e2;
@@ -351,9 +443,6 @@ main {
   .content nav .menu_toggle {
     display: block;
   }
-  .signup_body form {
-    width: 100%;
-  }
 }
 /* navigation start */
 nav {
@@ -484,7 +573,7 @@ nav .menu_toggle input:checked + label span:nth-child(3) {
 
 /* footer start */
 footer {
-  padding: 100px 0;
+  padding: 140px 0 90px;
 }
 footer .footer_header {
   text-align: center;
@@ -1924,7 +2013,7 @@ footer .footer_copyright {
   .signup_body form {
     width: 100%;
   }
-  .signup_body form table colgroup .test {
+  .signup_body form table colgroup col:nth-child(1) {
     width: 25% !important;
   }
 }
